--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cypress run specific test
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Cypress with specific spec
         uses: cypress-io/github-action@v6
         with:
           command: npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/addTagFrmConvo.cy.js"
 
+      - name: Upload Cypress JSON report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-json-report
+          path: cypress/reports/*.json
