--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           command: npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/addTagFrmConvo.cy.js"
+        continue-on-error: true  # ← allows the next steps to run even if this fails
 
       - name: Upload Cypress JSON report
+        if: always()  # ← forces this step to always run
         uses: actions/upload-artifact@v4
         with:
           name: cypress-json-report
