--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress with specific spec
-        uses: cypress-io/github-action@v6
-        with:
-          command: npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
+      - name: Run selected Cypress specs
+  uses: cypress-io/github-action@v6
+  with:
+    command: |
+      echo "Available specs:" && ls -l cypress/e2e
+      npx cypress run \
+        --spec cypress/e2e/loginPage.cy.js \
+        --spec cypress/e2e/addExistingMember.cy.js \
+        --spec cypress/e2e/createConversation.cy.js
+
         continue-on-error: true  # ← allows the next steps to run even if this fails
 
       - name: Upload Cypress JSON report
