--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,19 +13,18 @@ jobs:
         run: npm ci
 
       - name: Run selected Cypress specs
-  uses: cypress-io/github-action@v6
-  with:
-    command: |
-      echo "Available specs: " && ls -l cypress/e2e
-      npx cypress run \
-        --spec cypress/e2e/loginPage.cy.js \
-        --spec cypress/e2e/addExistingMember.cy.js \
-        --spec cypress/e2e/createConversation.cy.js
-
-        continue-on-error: true  # ← allows the next steps to run even if this fails
+        uses: cypress-io/github-action@v6
+        with:
+          command: |
+            echo "Available specs:" && ls -l cypress/e2e
+            npx cypress run \
+              --spec cypress/e2e/loginPage.cy.js \
+              --spec cypress/e2e/addExistingMember.cy.js \
+              --spec cypress/e2e/createConversation.cy.js
+        continue-on-error: true  # allows next steps to run even if tests fail
 
       - name: Upload Cypress JSON report
-        if: always()  # ← forces this step to always run
+        if: always()  # forces this to run even if previous step failed
         uses: actions/upload-artifact@v4
         with:
           name: cypress-json-report
