--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,7 @@ jobs:
       - name: Run Cypress with specific spec
         uses: cypress-io/github-action@v6
         with:
-          command: 
-            echo "Available specs:" && ls -al cypress/e2e/
-            npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
+          command: npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
         continue-on-error: true  # ← allows the next steps to run even if this fails
 
       - name: Upload Cypress JSON report
