--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,7 @@ jobs:
         continue-on-error: true
 
       - name: Install AWS CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli
+        run: aws --version
 
       - name: Upload JSON reports to S3
         if: always()
@@ -32,7 +30,7 @@ jobs:
           echo "Uploading Cypress JSON reports to S3..."
           for file in cypress/reports/*.json; do
             echo "Uploading $file..."
-            aws s3 cp "$file" "s3://projects-test-reports/cypress-reports/$(basename "$file")"
+            aws s3 cp "$file" "s3://projects-test-reports/hxc/$(basename "$file")"
           done
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
