--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Cypress Tests
 
-on:
-  schedule:
-    - cron: '0 * * * *'
+on: push
+  # schedule:
+  #   - cron: '30 6 * * *'  # Runs at 12:00 PM IST (06:30 UTC) - Note: Scheduled workflows only run if the default branch has had a commit within the last 90 days (GitHub policy to prevent resource drain).
 
 jobs:
   cypress-run:
@@ -15,20 +15,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: List available test files
-        run: ls -la cypress/e2e
+      # - name: List available test files
+      #   run: ls -la cypress/e2e
 
       - name: Run selected Cypress specs
-        run: |
-          echo "Running selected specs..."
-          npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
+        run: npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
         continue-on-error: true
 
-      - name: Install AWS CLI and jq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
-          aws --version
+      # - name: Install AWS CLI and jq
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y jq
+      #     aws --version
 
       - name: Upload JSON reports to S3
         if: always()
