--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Cypress Tests
 
-on: push
-  # schedule:
-  #   - cron: '30 6 * * *'  # Runs at 12:00 PM IST (06:30 UTC) - Note: Scheduled workflows only run if the default branch has had a commit within the last 90 days (GitHub policy to prevent resource drain).
+on: 
+  schedule:
+    - cron: '30 6 * * *'  # Runs at 12:00 PM IST (06:30 UTC) - Note: Scheduled workflows only run if the default branch has had a commit within the last 90 days (GitHub policy to prevent resource drain).
 
 jobs:
   cypress-run:
@@ -19,7 +19,7 @@ jobs:
       #   run: ls -la cypress/e2e
 
       - name: Run selected Cypress specs
-        run: npx cypress run --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
+        run: npx cypress run # --spec "cypress/e2e/loginPage.cy.js,cypress/e2e/addExistingMember.cy.js,cypress/e2e/createConversation.cy.js"
         continue-on-error: true
 
       # - name: Install AWS CLI and jq
